--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "clockwork-browser": "^1.1.1"
     }
 }
