--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "clockwork-browser": "^1.1.1"
+        "clockwork-browser": "^1.1.1",
+        "sweetalert": "^2.1.2"
     }
 }
